Fixed updated terms screen to no jump when clicking.

--- a/app/updated-terms-and-conditions/styles.less
+++ b/app/updated-terms-and-conditions/styles.less
@@ -22,3 +22,21 @@
         padding: @mobile-pad;
     }
 }
+
+.updated-terms-form-group {
+
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.new-terms-agree {
+
+    label .error {
+
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        line-height: 1;
+    }
+}
